added heroku easy deloy

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BENTO_USERNAME=""
-BASE_URL=""
-PORT="" #optional
-HOST="" #optional
+BENTO_USERNAME="" #required, your bento username
+BASE_URL="" #optional, your custom domain name
+PORT="" #optional, the port which your app listens to
+HOST="" #optional, the ip address which your app is hosted
