Update start command in okteto.yml

--- a/okteto.yml
+++ b/okteto.yml
@@ -1,13 +1,10 @@
 name: bento
 image: node:20.8.1
 workdir: /
-command: ["npm", "start"]
+command: ["sh", "-c", "npm install && npm start"]
 volumes:
   - /node_modules
 sync:
   - .:/
 forward:
   - 3000:3000
-initContainer:
-  image: node20.8.1
-  command: ["npm", "install"]
