--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
         with:
           project: "vikshan-bento"
           entrypoint: "app.js"
-          root: ""
+          root: "./"
           
           
