--- a/package.json
+++ b/package.json
@@ -21,6 +21,15 @@
     "pm2": "^5.4.3"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.1",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
+    "conventional-changelog-gitmoji": "^0.2.5",
+    "semantic-release": "^24.2.0",
+    "semantic-release-gitmoji": "^1.6.8",
     "@types/pino": "^7.0.5",
     "prettier": "^3.3.3"
   }
